--- a/index.html
+++ b/index.html
@@ -1,14 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="assets/css//stylesheet.css">
+    <title>Practica1</title>
 </head>
 
+
 <body>
+    <header id="home">
+        <div id="siteName"></div>
+
+        <h1>pagina de karen </h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#home">home</a>
+                </li>
+                <li>
+                    <a href="#aboutme"> aboutMe</a>
+                </li>
+                <li>
+                    <a href="#portafolio">Portafolio</a>
+                </li>
+                <li>
+                    <a href="#GitHUb">#GitHUb</a>
+                </li>
+                <li>
+                    <a href="https://github.com/Karen1309" target="_Blank">  #GitHUb</a>
+                </li>
+            </ul>
+
+        </nav>
+    </header>
+
+    <section id="wellcome" class="box">
+        <article id="aboutMe">
+
+            <div id="ProfilePic">
+
+                <img src="assets/img/fotokaren.jpg" alt="Karen C" width="500px" height="auto">
+                <div>
+                    <h3>¿Como me llamo y como me gusta que me digan</h3>
+                    <p>Me llamo karen Collazos, Y me gusta que me digan Karen </p>
+                    <h3>¿De donde soy?</h3>
+                    <p>Soy de Bogotá Colombia</p>
+                    <h3>¿Cuales son mis Hobbies?</h3>
+                    <p>Me gusta Bailar y escuchar musica</p>
+                    <h3>Un dato curioso mio</h3>
+                    <p>Soy un poco penosa</p>
+                </div>
+            </div>
+        </article>
+
+    </section>
+    <main>
+        <section class="box" id="portafolio">
+            <h2>Portafolio</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta adipisci consequatur provident iusto porro exercitationem quia id fuga molestiae consectetur cumque non, ex laudantium similique, optio excepturi est placeat quis! </p>
+        </section>
+
+
+
+        <section class="box" id="skillset">
+            <h2>skill set</h2>
+            <table border="1px">
+                <thead>
+                    <tr>
+                        <td>#</td>
+                        <td>Skill</td>
+                        <td>Conocimineto</td>
+
+                </thead>
+                </tr>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>HTML</td>
+                        <td>*****</td>
+
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>CSS</td>
+                        <td>*****</td>
+
+                    </tr>
+                </tbody>
+            </table>
+
+
+        </section>
+    </main>
 
 </body>
 
