--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
             <div id="ProfilePic">
                 <img src="assets/img/fotokaren.jpg" alt="Karen C" width="250px" height="auto">
+
+
             </div>
             <div>
                 <h3>¿Como me llamo y como me gusta que me digan</h3>
@@ -52,6 +54,10 @@
                 <p>Me gusta Bailar y escuchar musica</p>
                 <h3>Un dato curioso mio</h3>
                 <p>Soy un poco penosa</p>
+                <h1>hola </h1>
+                 <!-- hola mundo -->
+                 <!-- hola mundo ho -->
+
             </div>
         </article>
 
